# Trading_GUI

./: Cargo.toml
src/: fetcher.rs  main.rs  style_custom.rs
