[package]
name = "trading_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version="0.3", features=["tokio", "debug"]}
async-tungstenite = { version="0.17.0", features=["tokio-runtime","tokio-rustls-webpki-roots"]}
futures = "0.3"
tokio = { version = "1.17.0", features = ["full"] }
json = "0.12.4"
tokio-rustls = "0.23.2"




# iced = {version="0.3", features=["tokio", "debug"]}